Небольшое комментарное уточнение по FAQ @import css/scss

--- a/style.css
+++ b/style.css
@@ -43,7 +43,8 @@
   height: 20px;
 }
 
-/*Ваши style.css или style.scss нужно указать в ковычках вместо "стили_студента_номер"*/
+/*Ваши style.scss нужно указать в ковычках вместо "стили_студента_номер",
+ если только css, то в style.css аналогично*/
 /*И кстати нужно пока только html, поэтому стили сюда пока что необязательно*/
 /*ширина рабочей части сайта 1200px - flex: 0 1 1200px;, шрифт - font-family: "Poppins", sans-serif;*/
 /*@import "стили_студента_1";*/
