Добавлен пункт шапки и стр discoveries.html

--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,5 @@
 @import "header";
+@import "discoveries";
 
 /*Ваши style.scss нужно указать в ковычках вместо "стили_студента_номер",
  если только css, то в style.css аналогично*/
