--- a/style.css
+++ b/style.css
@@ -43,6 +43,65 @@
   height: 20px;
 }
 
+.discoveries__brainwrapper {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: minmax(350px, 950px);
+  font-family: sans-serif;
+  justify-items: center;
+}
+.discoveries__brainwrapper .discoveries__title {
+  font-size: 48px;
+  font-weight: bold;
+  text-align: center;
+}
+.discoveries__brainwrapper .discoveries__subtitle {
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  padding-top: 20px;
+}
+.discoveries__brainwrapper .imgbrain1 {
+  grid-template: 425px/minmax(300px, 600px);
+}
+.discoveries__brainwrapper .imgbrain2 {
+  grid-template: 500px/minmax(300px, 450px);
+}
+.discoveries__brainwrapper .discoveries__imgbrain {
+  display: grid;
+  padding: 20px 0 20px 0;
+  justify-items: center;
+  justify-self: center;
+}
+.discoveries__brainwrapper .discoveries__imgbrain .imgbrain__img {
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: auto;
+}
+.discoveries__brainwrapper .discoveries__imgbrain .brainimg1 {
+  background-image: url("img/ratbrain1.webp");
+}
+.discoveries__brainwrapper .discoveries__imgbrain .imgbrain__text {
+  text-align: center;
+}
+.discoveries__brainwrapper .discoveries__text {
+  display: grid;
+}
+.discoveries__brainwrapper .discoveries__text .brainimg2 {
+  background-image: url("img/ratbrain2.png");
+}
+h1 {
+  margin: 0;
+  padding: 0;
+}
+
+/*justify-items: center;
+justify-self: center;
+align-items: center;
+align-self: center;
+align-content: center;
+justify-content: center;*/
 /*Ваши style.scss нужно указать в ковычках вместо "стили_студента_номер",
  если только css, то в style.css аналогично*/
 /*И кстати нужно пока только html, поэтому стили сюда пока что необязательно*/
