all style files -> one folder

--- a/css/discoveries.scss
+++ b/css/discoveries.scss
@@ -40,7 +40,7 @@
     }
 
     .discoveries__brain-img--first {
-      background-image: url("img/ratbrain1.webp");
+      background-image: url("../img/ratbrain1.webp");
     }
 
     .discoveries__brain-text {
@@ -52,7 +52,7 @@
     display: grid;
 
     .discoveries__brain-img--second {
-      background-image: url("img/ratbrain2.png");
+      background-image: url("../img/ratbrain2.png");
     }
 
   }
