--- a/css/header.scss
+++ b/css/header.scss
@@ -11,7 +11,7 @@
     align-items: center;
 
     .header__logo {
-      background-image: url("img/header_logo.webp");
+      background-image: url("../img/header_logo.webp");
       background-size: cover;
       width: 198px;
       height: 58px;
