--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,8 @@
-@import "header";
-@import "discoveries";
+@import "../css/header";
+@import "../css/discoveries";
+
+
+
 
 /*Ваши style.scss нужно указать в ковычках вместо "стили_студента_номер",
  если только css, то в style.css аналогично*/
