--- a/css/style.scss
+++ b/css/style.scss
@@ -1,10 +1,7 @@
 @import "../css/header";
 @import "../css/discoveries";
 @import "../css/nullstyle";
+@import "../css/why-us.scss";
 @import "common.css";
 
-
-
 /*Ваши .scss и .css нужно указать в ковычках вместо "стили_студента_номер"*/
-
-
