--- a/css/style.scss
+++ b/css/style.scss
@@ -3,5 +3,6 @@
 @import "../css/nullstyle";
 @import "../css/why-us.scss";
 @import "common.css";
+@import "footer.scss";
 
 /*Ваши .scss и .css нужно указать в ковычках вместо "стили_студента_номер"*/
