--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 @import "common.css";
 @import "why-us.scss";
+@import "pricing.css"
+
 .header {
   display: flex;
   justify-content: center;
