deleted color property in css map

--- a/css/style.scss
+++ b/css/style.scss
@@ -4,5 +4,6 @@
 @import "../css/why-us.scss";
 @import "common.css";
 @import "footer.scss";
+@import "pricing.css"
 
 /*Ваши .scss и .css нужно указать в ковычках вместо "стили_студента_номер"*/
