--- a/css/common.css
+++ b/css/common.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+@import url()
 
 :root {
     font-family: "Poppins", sans-serif;
     scroll-behavior: smooth;
     --title-color: #519ac9;
+    --subtitle-color: #242D31;
+    --text-color: #647A81;
+    --subtext-color: #235565;
 }
 body {
     display: grid;
