did styling of select plan section and buttons

--- a/css/pricing.css
+++ b/css/pricing.css
@@ -65,3 +65,41 @@ margin-top: 20px;
     font-family: "Signika", sans-serif;
     color: var(--subtitle-color);
 }
+
+.pricing__time > p {
+    font-size: 16px;
+    font-family: "Poppins", sans-serif;
+    color: var(--text-color);
+}
+
+.pricing__features-checkmark {
+    color: var(--title-color);
+    height: 16px;
+    width: 16px;
+}
+
+.pricing__features-crossmark {
+    color: var(--crossmark-color);
+    height: 16px;
+    width: 16px;
+}
+
+.pricing__features > li {
+    font-size: 16px;
+    font-family: "Poppins", sans-serif;
+    color: var(--text-color);
+}
+
+.pricing__select-plan {
+    font-size: 10,8px;
+    font-family: "Poppins", sans-serif;
+    color: var(--button-link-color);
+    background-color: var(--text-color);
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+    border-radius: 5px;
+    padding: 16px 24px;
+    margin: 10px;
+    cursor: pointer;
+}
