--- a/css/common.css
+++ b/css/common.css
@@ -9,6 +9,9 @@
     --subtitle-color: #242D31;
     --text-color: #647A81;
     --subtext-color: #235565;
+    --crossmark-color: #6f6f72;
+    --button-link-color: #fff;
+    
 }
 body {
     display: grid;
