--- a/css/common.css
+++ b/css/common.css
@@ -5,9 +5,17 @@
     --title-color: #519ac9;
     --subtitle-color: #242D31;
     --text-color: #647A81;
+    --bn-select-color: #235565;
+    --select-border-color: #647A81;
+    --select-visited-color: #519ac9;
+    --select-hover-color: #235565;
+    --select-active-color: #235565;
     --subtext-color: #235565;
     --crossmark-color: #6f6f72;
-    --button-link-color: #fff;
+    --button-text-color: #fff;
+    --svg-bg-color: #242d31;
+    --svg-text-color: #fff;
+    --pricing-card-bg-color: #f8fafb;
     font-family: "Poppins", sans-serif;
     font-family: "Signika", sans-serif;
     scroll-behavior: smooth;
