--- a/css/pricing.css
+++ b/css/pricing.css
@@ -97,8 +97,11 @@ margin-top: 20px;
     flex-direction: column;
     margin-top: 30px;
     padding: 31px;
-    background-color: var(--pricingcard-bg-color);
 }
+
+.pricing__details-card {
+    background-color: var(--pricingcard-bg-color);
+    border: 1px 
 
 .pricing__plan-title {
     font-size: 1,375rem;
