delete pricing styling

--- a/css/pricing.css
+++ b/css/pricing.css
@@ -1,173 +1,6 @@
 .pricing {
-    margin:0;
-    padding:60px 0 50 0;
     display: flex;
+    margin: auto;
+    max-width: 1200px;
 }
-
-.pricing__content {
-    padding: 0 24px;
-    
-}
-
-.pricing__info {
-    padding: 0 15px;
-}
-
-/*Pricing schedule two columns*/
-@media (min-width: 767px) {
-    .pricing__schedule {
-        display: flex; 
-    } 
-    .pricing__day, .pricing.time {
-        flex-direction: row;
-        flex: 1;
-        align-items: center;
-        justify-content: space-around;
-    }
-}
-
-/*Pricing plan two columns*/
-@media (min-width: 768px) {
-    .pricing__plan {
-        display: flex; 
-    } 
-    .pricing__details {
-        flex-direction: row;
-        flex: 1;
-        align-items: center;
-        justify-content: space-around;
-    }
-}
-
-.pricing__title {
-color: var(--title-color);
-font-size: 0,75rem;
-text-align: left;
-font-weight: bold;
-font-family: inherit;
-}
-
-.pricing__subtitle {
-font-size: 2,125rem;
-color: var(--subtitle-color);
-text-align: left;
-font-weight: bold;
-font-family: "Signika", sans-serif;
-margin-top: 20px;
-}
-
-.pricing__description {
-    color: var(--text-color);
-    font-size: 1rem;
-    text-align: justify;
-    margin-top: 25px;
-    font-family: inherit;
-}
-
-.pricing__schedule {
-    margin-top: 20px;
-    margin-bottom: 16px;
-    display: flex;
-    flex-direction: column;
-}
-.pricing__day > p {
-    margin-bottom: 5px;
-    color: var(--subtext-color);
-    font-size: 1rem;
-    font-weight: bold;
-    font-family: inherit;
-}
-
-.pricing__price {
-    font-size: 2,125rem;
-    font-family: inherit;
-    font-weight: bold;
-    color: var(--subtext-color);
-}
-
-.arrow-svg_1j4 {
-    background-color: var(--svg-bg-color);
-    /*color: var(--svg-text-color); arrow inside should be white*/
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-}
-.pricing__plan {
-    display: flex;
-    flex-direction: column;
-    margin-top: 30px;
-    padding: 31px;
-}
-
-.pricing__details-card {
-    background-color: var(--pricingcard-bg-color);
-    border: 1px 
-
-.pricing__plan-title {
-    font-size: 1,375rem;
-    font-family: "Signika", sans-serif;
-    color: var(--subtitle-color);
-    margin-top: 25px;
-}
-
-.pricing__time > p {
-    font-size: 1rem;
-    font-family: "Poppins", sans-serif;
-    color: var(--text-color);
-}
-
-.pricin__features {
-    margin-top: 20px;
-}
-.pricing__features-checkmark {
-    color: var(--title-color);
-    height: 16px;
-    width: 16px;
-}
-
-.pricing__features-crossmark {
-    color: var(--crossmark-color);
-    height: 16px;
-    width: 16px;
-}
-
-.pricing__features > li {
-    font-size: 1rem;
-    font-family: "Poppins", sans-serif;
-    color: var(--text-color);
-}
-
-.pricing__button {
-    margin-top: 20px;
-}
-
-.pricing__button:hover {
-background-color: var(--select-hover-color);
-}
-
-.pricing__button:active {
-background-color: var(--select-active-color);
-}
-
-.pricing__button:visited{
-    background-color: var(--select-visited-color);
-}
-
-.pricing__select-plan {
-    font-size: 0,675rem;
-    font-family: "Poppins", sans-serif;
-    color: var(--button-text-color);
-    background-color: var(--bn-select-color);
-    text-decoration: none;
-    text-align: center;
-    font-weight: bold;
-    display: inline-block;
-    border-radius: 5px;
-    padding: 16px 24px;
-    margin: 10px;
-    cursor: pointer;
-    border: 1,6px solid var(--select-border-color);
-}
-
-
 
