--- a/css/style.scss
+++ b/css/style.scss
@@ -5,6 +5,7 @@
 @import "common.css";
 @import "footer.scss";
 @import "pricing.css";
+@import "faq.css";
 
 
 /*Ваши .scss и .css нужно указать в ковычках вместо "стили_студента_номер"*/
