--- a/css/faq.css
+++ b/css/faq.css
@@ -29,6 +29,8 @@
     font-size: 21px;
     font-weight: 600;
     line-height: 31.5px;
+    text-align: left;
+    width: 75%;
 }
 .faq__default-answers__answer {
     color: rgb(100, 122, 129);
@@ -56,4 +58,27 @@ hr {
     height: 0.5px;
     background-color: rgb(100, 122, 129);;
     border-color: rgb(100, 122, 129);;
+  }
+  .faq__all-block {
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
+  }
+  .faq__default-answers__show-aswer {
+    background-color: rgba(0, 0, 0, 0);
+    text-align: right;
+    width: 25%;
+  }
+  .faq__animals-photo-next, .faq__animals-photo-previous {
+    background-color: rgba(0, 0, 0, 0);
+    color: black;
+    height: 20px;
+    width: 20px;
+  }
+  .faq__animals-photo-previous {
+    transform: matrix3d(-1, 0, 0, 0, 0, 1, 0, 0, 0, 0, -1, 0, 0, 0, 0, 1);
+  }
+  .faq__default-answers__item__inline{
+    display: flex;
   }
