added styling for pricing content

--- a/css/common.css
+++ b/css/common.css
@@ -5,6 +5,7 @@
     --title-color: #519ac9;
     --subtitle-color: #242D31;
     --text-color: #647A81;
+    --time-color: #647A81;
     --bn-select-color: #235565;
     --select-border-color: #647A81;
     --select-visited-color: #519ac9;
