--- a/css/common.css
+++ b/css/common.css
@@ -6,6 +6,10 @@
     --subtitle-color: #242D31;
     --text-color: #647A81;
     --time-color: #647A81;
+    --price-color: #235565;
+    --plan-title-color: #242D31;
+    --price-features-color: #647A81;
+    --checkmark-color: #519ac9;
     --bn-select-color: #235565;
     --select-border-color: #647A81;
     --select-visited-color: #519ac9;
@@ -16,7 +20,7 @@
     --button-text-color: #fff;
     --svg-bg-color: #242d31;
     --svg-text-color: #fff;
-    --pricing-card-bg-color: #f8fafb;
+    --details-card-bg-color: #f8fafb;
     font-family: "Poppins", sans-serif;
     font-family: "Signika", sans-serif;
     scroll-behavior: smooth;
