--- a/css/pricing.css
+++ b/css/pricing.css
@@ -88,8 +88,23 @@
     color: var(--price-features-color);
     font-family: "Poppins", sans-serif;
     font-size: 1rem;
-    margin-top: 20px;
+   /* margin-top: 20px; flex code from here
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
 }
+
+.pricing__features li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;*/
+}
+
+.pricing__features-checkmark, .pricing__features-crossmark {
+    margin-right: 10px;
+}
+
 .pricing__features-checkmark {
     color: var(--checkmark-color);
     height: 20px;
