made carousel buttons

--- a/css/common.css
+++ b/css/common.css
@@ -18,8 +18,8 @@
     --subtext-color: #235565;
     --crossmark-color: #6f6f72;
     --button-text-color: #fff;
-    --svg-bg-color: #242d31;
-    --svg-text-color: #fff;
+    --svg-bg-color: #235565;
+    --svg-arrow-color: #fff;
     --details-card-bg-color: #f8fafb;
     font-family: "Poppins", sans-serif;
     font-family: "Signika", sans-serif;
